# retro-quewui-backend

./: .env  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
migrations/: 20250515_create_contacts.sql  20250515_create_experiences.sql  20250515_create_github_stats.sql  20250515_create_posts.sql  20250515_create_profiles.sql  20250515_create_projects.sql  20250515_create_skills.sql  20250519225550_create_github_profiles.sql
scripts/: seed_from_cv.rs  seed_from_cv.sh  simple_seed.sh  test_login.sh
src/: auth.rs  error.rs  lib.rs  main.rs  validation.rs
src/config/: database.rs
src/docs/: mod.rs
src/models/: contact.rs  experience.rs  experience_repository.rs  github_profile.rs  github_profile_repository.rs  github_stats.rs  github_stats_repository.rs  mod.rs  post.rs  post_repository.rs  profile.rs  profile_repository.rs  project.rs  project_repository.rs  repository.rs  skill.rs  skill_repository.rs
src/routes/: admin.rs  auth.rs  contact.rs  experiences.rs  github_profile.rs  github_stats.rs  health.rs  mod.rs  posts.rs  profile.rs  projects.rs  skills.rs
src/services/: github_service.rs
src/tests/: mod.rs
