[package]
name = "retro-quewui-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
actix-cors = "0.6.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28", features = ["full"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono", "uuid", "json", "migrate", "runtime-tokio-rustls"] }
anyhow = "1.0"
thiserror = "1.0"
